# runny.ai

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  app.py  pyproject.toml
core/: __init__.py  ai_assistant.py  client.py  fetch.py  models.py  plotting.py  prompts.py  schemas.py  suggestions.py  workouts.py
core/prompts/: analyse_history.md  analysis.md  create_workout.md  feedback.md  review_execution.md  system.md  training_plan_review.md  workout.md
docs/: DATA.md  DOCS.md  PRIVACY.md
ideas/: SUGGESTIONS.md  suggestions.py
tests/: test_garmin_login.py  test_workout_upload.py
