[project]
name = "ai-runny"
version = "0.1.0"
description = "AI-powered running coach that connects to Garmin Connect, analyzes training history, and generates personalized workouts"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "garminconnect>=0.2.38",
    "openai>=1.40",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "streamlit>=1.45",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
